# hier-rag-med

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  config.yaml  debug_hier_system.py  debug_model_name.py  environment.yml  fetch_data.py  fetch_foundation_data.py  fix_generation.py  fix_metadata.py  mirage_analysis_report.json  pyproject.toml  requirements.txt  setup_hierarchical_system.py  setup_kg_system.py  test_bench.py  test_m1_rag.py  test_ollama_api.py
.github/workflows/: ci.yml
config/: config.yaml
debug/: debug_gen.py  debug_mirage.py
docker/: Dockerfile  docker-compose.yml
evaluation/results/: evaluation_results_hierarchical_system_20250620_160716.json  evaluation_results_hierarchical_system_20250620_161847.json  evaluation_results_hierarchical_system_20250620_162958.json  evaluation_results_hierarchical_system_20250620_163747.json  evaluation_results_hierarchical_system_20250621_033858.json  evaluation_results_hierarchical_system_20250621_105151.json  gpu_evaluation_results_20250619_152254.json  gpu_evaluation_results_20250619_152544.json  gpu_evaluation_results_20250620_012935.json  gpu_evaluation_results_20250620_014333.json  gpu_evaluation_results_20250620_042957.json  gpu_evaluation_results_20250620_043802.json  gpu_evaluation_results_20250620_044605.json  gpu_evaluation_results_20250620_045217.json  gpu_evaluation_results_20250620_045513.json  (+1 more)
src/: __init__.py  config.py  data.py  evaluation.py  generation.py  main.py  processing.py  retrieval.py  streamlit_app.py  web.py
tests/: test_retrieval.py
(+87 files in other folders)
