[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hierragmed"
version = "0.1.0"
description = "Hierarchical Medical RAG System"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "langchain>=0.1.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "streamlit>=1.31.0",
    "torch>=2.2.0",
    "transformers>=4.37.2",
    "datasets>=2.16.1",
    "evaluate>=0.4.1",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.3",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.1",
    "rich>=13.7.0",
    "click>=8.1.7",
    "pydantic>=2.6.1",
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "httpx>=0.26.0",
    "tenacity>=8.2.3",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[project.scripts]
hierragmed = "hierragmed.cli:main"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=hierragmed" 